# suno

./: .dockerignore  Dockerfile  README.md  mise.toml  pyproject.toml
app/: audio.py  config.py  main.py  transcriber.py  vad.py  ws_handler.py
static/: index.html
