[project]
name = "realtime-stt"
version = "0.1.0"
description = "Production-grade real-time Speech-to-Text web app with Whisper + FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "faster-whisper>=1.0.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "webrtcvad>=2.0.10",
    "scipy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
